--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide :title, t("signup_title") %>
-<h1><% t "signup_title" %></h1>
+<% provide :title, t("edit_title") %>
+<h1><%= t "edit_title" %></h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
