add and show category

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -301,3 +301,15 @@ aside{
 .users.follow {
   padding: 0;
 }
+
+
+.categories {
+   margin-left: 30%;
+  .form-control{
+    display: inline;
+    width: 300px; 
+  }
+  .btn {
+    width: 100px;
+  }
+}
