--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,15 @@
-<div class="center jumbotron">
-  <h1><%= t("home_title") %></h1>
-  <%= link_to t("signup_button"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <h1><%= current_user.name %></h1>
+      <section class="stats">
+        <%= render "shared/stats" %>
+      </section>
+    </aside>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t "home_title" %></h1>
+    <%= link_to t("signup_button"), signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+<% end %>
