--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,13 +1,13 @@
 <% @user ||= current_user %>
 <div class="stats">
-  <%= link_to following_user_path(@user) do %>
+  <%= link_to user_followings_path @user do %>
     <strong id="followers" class="stat">
       <%= @user.following.count %>
     </strong>
     <%= t "following" %>
   <% end %>
 
-  <%= link_to followers_user_path(@user) do %>
+  <%= link_to user_followers_path @user do %>
     <strong id="followers" class="stat">
       <%= @user.followers.count %>
     </strong>
