--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,9 @@
         <%= render "shared/stats" %>
       </section>
     </aside>
+    <div class="learn-form">
+      <%= render "shared/learn_form" %>
+    </div>
   </div>
 <% else %>
   <div class="center jumbotron">
