--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,13 +1,23 @@
-<% @categories.each do |category| %>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title"><%= category.name %></h3>
+<%= form_tag words_path, method: "get", remote: true do %>
+  <div class="categories">
+    <div class="filter-select">
+      <%= label_tag(:category_id, t("category_label")) %>
+      <%= select_tag :category_id, options_from_collection_for_select(@categories, :id, :name), 
+        class: "form-control" %>
     </div>
-    <div class="panel-body">
-      <div class="categories-word-<%= category.id %>">
-        <%= render category.words %>
-      </div>
+    <div calss="type-select">
+      <%= label_tag "type_learned", t("learned_label") %>
+      <%= radio_button_tag "type", "learned", true %>
+      <%= label_tag "type_notlearned", t("notlearned_label") %>
+      <%= radio_button_tag 'type', 'notlearned' %>
+      <%= label_tag "type_all", t("all_label") %>
+      <%= radio_button_tag "type", "all" %>
     </div>
-  </div>
+    <div class="button-select">
+      <%= submit_tag t("filter_button"), class: "btn btn-primary" %>
+      <%= submit_tag t("pdf_button"), class: "btn btn-primary" %>
+     </div>
+   </div>
 <% end %>
-
+<div class="word-list">
+</div>
