--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,10 @@
         <li><%= link_to t("home_link"), root_path %></li>
         <li><%= link_to t("help_link"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t("users_link"), root_path %></li>
+          <% if current_user.admin? %>
+            <li><%= link_to t("word_list"), admin_words_path %></li>
+            <li><%= link_to t("all_users"), admin_users_path %></li>
+          <% end %>
           <li class="dropdown">
             <%= link_to "#", class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
               <%= t "account" %>
