--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,7 +1,7 @@
-<%= form_tag words_path, method: "get", remote: true do %>
+<%= form_tag words_path, method: :get, remote: true do %>
   <div class="categories">
     <div class="filter-select">
-      <%= label_tag(:category_id, t("category_label")) %>
+      <%= label_tag :category_id, t("category_label") %>
       <%= select_tag :category_id, options_from_collection_for_select(@categories, :id, :name), 
         class: "form-control" %>
     </div>
