--- a/app/views/lessons/_lesson.html.erb
+++ b/app/views/lessons/_lesson.html.erb
@@ -1,3 +1,3 @@
-<li id="lesson-<%= lesson.id %>">
+<li class="list-group-item" id="lesson-<%= lesson.id %>">
   <%= link_to lesson.name, lesson %>
 </li>
