--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,1 +1,31 @@
-<span class="word"><%= @lesson.name %></span>
+<div class="lesson">
+  <div class="panel panel-success">
+    <div class="panel-heading">
+      <h3 class="panel-title">Result</h3>
+    </div>
+    <div class="panel-body">
+      <span id="result">0/10</span>
+    </div>
+  </div>
+  <%= form_tag lessons_path, remote: true do %> 
+    <%= hidden_field_tag :id, nil, value: @lesson.id %>
+    <% @lesson.words.each do |word| %>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <strong>Question <%= word.id %>: </strong>
+            <%= word.content %>
+          </h3>
+        </div>
+        <div class="panel-body">
+          <ul class="word-answer-<%= word.id %>">
+            <%= render word.answers %>
+          </ul>
+        </div>
+      </div>
+    <% end %>
+    <div class="button-select">
+      <%= submit_tag t("submit_label"), class: "btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
